Atualização da home

--- a/css/styles.css
+++ b/css/styles.css
@@ -159,13 +159,13 @@ sup {
 }
 
 a {
-  color: #bd5d38;
+  color: #f5a900;
   text-decoration: none;
   background-color: transparent;
 }
 a:hover {
-  color: #824027;
-  text-decoration: underline;
+  color: #ffaf04d8;
+  text-decoration: none;
 }
 
 a:not([href]):not([class]) {
@@ -6075,7 +6075,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #bd5d38 !important;
+  background-color: #101020 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
@@ -9777,7 +9777,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #bd5d38 !important;
+  color: #f5a900 !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
@@ -10079,7 +10079,7 @@ p.lead {
   margin-right: 0;
 }
 .social-icons .social-icon:hover {
-  background-color: #bd5d38;
+  background-color: #f5a900;
 }
 
 .dev-icons {
