--- a/css/styles.css
+++ b/css/styles.css
@@ -3876,6 +3876,10 @@ input[type=button].btn-block {
   list-style: none;
 }
 
+a:hover {
+  background-size: 4px 50px;
+}
+
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
